[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "Francis Pratt", email = "francis.pratt@stfc.ac.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "Quadratic and cubic solver"
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["numpy"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/francis-pratt/polysolve"
Repository="https://github.com/francis-pratt/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}
